--- a/cv.tex
+++ b/cv.tex
@@ -29,7 +29,7 @@
 %
 %============================================================================%
 
-\documentclass[10pt,A4,english]{article}	
+\documentclass[10pt,A4,german]{article}	
 
 
 %----------------------------------------------------------------------------------------
@@ -38,7 +38,7 @@
 
 % we use utf8 since we want to build from any machine
 \usepackage[utf8]{inputenc}		
-\usepackage[USenglish]{isodate}
+\usepackage[German]{isodate}
 \usepackage{fancyhdr}
 \usepackage[numbers]{natbib}
 
@@ -49,7 +49,7 @@
 % provides \isempty test
 \usepackage{xstring, xifthen}
 \usepackage{enumitem}
-\usepackage[english]{babel}
+\usepackage[ngerman]{babel}
 \usepackage{blindtext}
 \usepackage{pdfpages}
 \usepackage{changepage}
@@ -439,218 +439,127 @@
 %	META SKILLS
 %----------------------------------------------------------------------------------------
 	\fcolorbox{white}{white}{\begin{minipage}[c][1.5cm][c]{1\mpwidth}
-		\LARGE{\textbf{\textcolor{maincol}{Philip Empl}}} \\[2pt]
-		\normalsize{ \textcolor{maincol} {Management Information Systems (M. Sc.)} }
+		\LARGE{\textbf{\textcolor{maincol}{Kevin Eschbach}}} \\[2pt]
+		\normalsize{ \textcolor{maincol} {Angewandte Informatik (B. Sc.)} }
 \end{minipage}} \\
-\icontext{CaretRight}{12}{XX.XX.XXXX in Los Angeles}{black}\\[6pt]
-\icontext{CaretRight}{12}{german}{black}\\[6pt]
-\icontext{CaretRight}{12}{unmarried}{black}\\[6pt]
+\icontext{CaretRight}{12}{06.09.1996 in Gelsenkirchen}{black}\\[6pt]
+\icontext{CaretRight}{12}{deutsch}{black}\\[6pt]
+\icontext{CaretRight}{12}{ledig}{black}\\[6pt]
 
 
 
-\cvsection{Skills}
+\cvsection{Sprachen}
 
-\cvskill{Software development} {6+ Jahre} {1} \\[-2pt]
+    \cvskill{Deutsch} {L1} {1} \\[-2pt]
 
-\cvskill{Cyber security} {4+ yrs.} {0.64} \\[-2pt]
+    \cvskill{Englisch} {B2} {0.8} \\[-2pt]
 
-\cvskill{Internet business/ \newline E-commerce} {4+ yrs.} {0.64} \\[-2pt]
+    \cvskill{Schwedisch} {B1} {0.5} \\[-2pt]
 
-\cvskill{Web development} {2+ yrs.} {0.32} \\[-2pt]
-
-\cvskill{Big data/ \newline Data science} {2+ yrs.} {0.32} \\[-2pt]
-
-\cvskill{Distributed legder \newline technology} {2+ yrs.} {0.32} \\[-2pt]
-
-\cvskill{Internet of things} {1+ yrs.} {0.16} \\[-2pt]
-
-\cvskill{Cloud computing} {1+ yrs.} {0.16} \\[-2pt] \\
-
-\cvskill{German} {L1} {1} \\[-2pt]
-
-\cvskill{English} {C1} {0.9} \\[-2pt]
-
-\newpage
 %---------------------------------------------------------------------------------------
-%	EDUCATION
+%	HOBBIES
 %----------------------------------------------------------------------------------------
-\cvsection{Education}
 
-\cvmetaevent
-{XX/XXXX - XX/XXXX}
-{Management Information Systems (M.Sc.)}
-{University of Lorem}
-{\textit{Field 1 • Field 2} \newline Master's thesis: \glqq title of Master's thesis\grqq.}
-\cvmetaevent
-{XX/XXXX - XX/XXXX}
-{Managment Information Systems (B.Sc.)}
-{University of Lorem}
-{\textit{Field 1 • Field 2} \newline Bachelor's thesis: \glqq title of Master's thesis\grqq.}
+\cvsection{Interessen}
+    \icontext{CaretRight}{12}{3D-Druck}{black}\\[6pt]
+    \icontext{CaretRight}{12}{Jagdhorn - Bläsercorps des Hegering Herne}{black}\\[6pt]
+    \icontext{CaretRight}{12}{Videospiele}{black}\\[6pt]
+    \icontext{CaretRight}{12}{Wandern}{black}\\[6pt]
 
-\cvmetaevent
-{XX/XXXX - XX/XXXX}
-{A-Level}
-{High School Lorem}
-{\textit{Field 1 • Field 2 • Field 3 • Field 4 • Field 5}.}
+%---------------------------------------------------------------------------------------
+%	CONTACT
+%----------------------------------------------------------------------------------------
+\cvsection{Kontakt}
 
+\icontext{MapMarker}{16}{Westring 37\\44787 Bochum}{black}\\[6pt]
+\icontext{MobilePhone}{16}{+49 157 746 905 33}{black}\\[6pt]
+\iconemail{Envelope}{16}{kevin.eschbach@rub.de}{kevin.eschbach@rub.de}{black}\\[6pt]
+\iconhref{Home}{16}{kevin-eschbach.de}{https://kevin-eschbach.de}{black}\\[6pt]
+\iconhref{Github}{16}{kevin-eschbach}{https://github.com/kevin-eschbach}{black}\\[6pt]
+\iconhref{Linkedin}{16}{linkedin.com/in/kevin-eschbach}{https://www.linkedin.com/in/kevin-eschbach/}{black}
 
-%
-%\cvsection{Projekte}
-
-%	\cvlist{
-%		\item \hyperlink{https://github.com/philipempl/ether-twin}{\textbf{Ether-Twin.}}\\ Ethereum Applikation für Digital Twins.
-%		\item \hyperlink{https://github.com/philipempl/Peter-Pan}{\textbf{Peter Pan.}}\\ Koch-App (t.b.a.).
-%		\item \hyperlink{https://github.com/philipempl/Innovation-Tool}{\textbf{Innovation Tool.}}\\ Webcrawler für \hyperlink{https://ibi.de/}{Ibi}.
-%		\item \hyperlink{https://github.com/philipempl/cozone}{\textbf{COZONE.}} \\ Soziales Netzwerk (t.b.a.).
-%		\item \hyperlink{https://github.com/geritwagner/enlit}{\textbf{ENLIT.}}\\ Exploring new Literature (Bachelorarbeit).
-%		\item \textbf{Crowdfunding.} \\Modul mit \hyperlink{https://senacor.com/}{Senacor} für \hyperlink{https://www.paydirekt.de/}{paydirekt}.
-%		}
-
-\cvsection{Interests}
-
-\icontext{CaretRight}{12}{Guitarist}{black}\\[6pt]
-\icontext{CaretRight}{12}{DIY}{black}\\[6pt]
-\icontext{CaretRight}{12}{Fitness}{black}\\[6pt]
-\icontext{CaretRight}{12}{Cooking}{black}\\[6pt]
-\icontext{CaretRight}{12}{Travel}{black}\\[6pt]
-
-
-
-
-\cvsection{Contact}
-
-\icontext{MapMarker}{16}{Street name XX\\D-XXXXX Lorem}{black}\\[6pt]
-\icontext{MobilePhone}{16}{+XX XXX XXXX XXXX}{black}\\[6pt]
-\iconemail{Envelope}{16}{XXXX@XXXXX.XX}{XXXX@XXXXX.XX}{black}\\[6pt]
-\iconhref{Home}{16}{XXX.XXX-XXXX.XX}{http://XXX-XXX.XXX.XX}{black}\\[6pt]
-\iconhref{Github}{16}{github.com/username}{https://www.github.com/username}{black}\\[6pt]
-\iconhref{Xing}{16}{xing.com/user\_name}{https://www.xing.com/profile/User_Name}{black}\\
-
-	
 %\cvqrcode{0.3}
 
 \end{leftcolumn}
 \begin{rightcolumn}
 %---------------------------------------------------------------------------------------
-%	TITLE  HEADER
+%	WORK EXPERIENCE
 %----------------------------------------------------------------------------------------
-
-
-%---------------------------------------------------------------------------------------
-%	PROFILE
-%----------------------------------------------------------------------------------------
-\cvsection{Biography}
+\vspace{10pt}
+\cvsection{Berufserfahrung}
 \vspace{4pt}
 
-\cvtext{\Blindtext[1]
-
-
-
-
-}
+\cvevent
+{08/2016 - 05/2021}
+	{Callcenter Agent - Minijob}
+	{Foerster \& Thelen Marktforschung GmbH}
+	{}
+	\vfill\null
+	
+\cvevent
+{05/2021 - 09/2022}
+	{Software Entwickler - Werkstudent}
+	{GBTEC Group}
+	{Quality Assertion und Frontend-Entwicklung mit Angular für eine Single-Page-Webapp zur Low- und No-Code Automatisierung von Business-Prozessen. Agiles Arbeitsumfeld im internationalen Team.}
+	\vfill\null
+	
+\cvevent
+{10/2022 - 11/2023}
+    {Wissenschaftliche Hilfskraft}
+    {Lehrstuhl für Produktionssysteme\\Ruhr-Universität Bochum}
+    {Entwicklung eines Systems zur Konfiguartionskorrektur eines Roboterarms mit Hilfe einer Infrarot Tiefen-Kamera im Rahmen des Projektes RoboSchalt.}
+    \vfill\null
 
 
 %---------------------------------------------------------------------------------------
-%	WORK EXPERIENCE
+%	EDUCATION
 %----------------------------------------------------------------------------------------
 
 \vspace{10pt}
-\cvsection{Work experience}
+\cvsection{Bildung}
 \vspace{4pt}
 
 
 \cvevent
-{XX/XXXX - today}
-	{Research assistant | PhD student}
-	{Department of Lipsum (Prof. Name)\newline University of Lipsum}
-	{Here you can describe your work content and go into detail about individual parts of this job. Possibly an enumeration by means of "," is useful. Otherwise, describe the essential content of this item in 1-2 sentences.}
+{2007 - 2015}
+	{Abitur}
+	{Schiller-Schule Bochum}
+	{Leistungsfächer - Mathematik, Biologie}
+	\vfill\null
+	
+
+\cvevent
+{2015 - 2020}
+	{Bachelor of Science | Angewandte Informatik}
+	{Institut für Neuroinformatik\newline Ruhr-Universität Bochum}
+	{Teilnahme am informatiCup 2019\\
+    Bachelor-Thesis - Stellplatzunabhängige Erkennung parallel geparkter Fahrzeuge mit Hilfe statischer Kameras}
 	\vfill\null
 
 
 \cvevent
-{XX/XXXX - XX/XXXX}
-	{Part-time research assistant}
-	{Department of Lipsum (Prof. Name)\newline University of Lipsum}
-	{Here you can describe your work content and go into detail about individual parts of this job. Possibly an enumeration by means of "," is useful. Otherwise, describe the essential content of this item in 1-2 sentences.}
+{2020 - Heute}
+	{Master of Science | Angewandte Informatik}
+	{Institut für Neuroinformatik\newline Ruhr-Universität Bochum}
+	{Fachlicher Schwerpunkt - Computational Neuroscience, Machine Learning\\
+    Master-Thesis - Algal growth Optimization with Machine Learning Methods}
 	\vfill\null
+    
 
-
+%---------------------------------------------------------------------------------------
+%	VOLUNTEERING
+%----------------------------------------------------------------------------------------
+\vspace{10pt}
+\cvsection{Ehrenamt}
+\vspace{4pt}
 	
 \cvevent
-{XX/XXXX - XX/XXXX}
-	{Trainer - Course name}
-	{Department of Lipsum (Prof. Name)\newline University of Lipsum}
-	{Here you can describe your work content and go into detail about individual parts of this job. Possibly an enumeration by means of "," is useful. Otherwise, describe the essential content of this item in 1-2 sentences.}
+{10/2021 - Heute}
+    {Gesellschaft für Informatik (GI)}
+	{Mitglied der Fachgruppe Neuroinformatik, Gründungsmitglied der virtuellen Hochschulgruppe der jungen GI}
+	{}
 	\vfill\null
 
-
-	
-\cvevent
-    {XX/XXXX - XX/XXXX}
-	{Trainer - Course name}
-	{Department of Lipsum (Prof. Name)\newline University of Lipsum}
-	{Here you can describe your work content and go into detail about individual parts of this job. Possibly an enumeration by means of ","  is useful. Otherwise, describe the essential content of this item in 1-2 sentences.}
-	\vfill\null
-	\vfill\null
-
-
-   	
-\cvevent
-{XX/XXXX - XX/XXXX}
-	{Trainer - Course name}
-	{Department of Lipsum (Prof. Name)\newline University of Lipsum}
-	{Here you can describe your work content and go into detail about individual parts of this job. Possibly an enumeration by means of "," is useful. Otherwise, describe the essential content of this item in 1-2 sentences.}
-	\vfill\null
-
-	
-\cvevent
-{XX/XXXX - XX/XXXX}
-	{Part-time research assistant}
-	{Department of Lipsum (Prof. Name)\newline University of Lipsum}
-	{Here you can describe your work content and go into detail about individual parts of this job. Possibly an enumeration by means of "," is useful. Otherwise, describe the essential content of this item in 1-2 sentences.}
-	\vfill\null
-
-
-
-\cvevent
-{XX/XXXX - XX/XXXX}
-	{Internship}
-	{Department \newline Company name (Location)}
-	{Here you can describe your work content and go into detail about individual parts of this job. Possibly an enumeration by means of "," is useful. Otherwise, describe the essential content of this item in 1-2 sentences.}
-	\vfill\null
-
-\cvevent
-{XX/XXXX - XX/XXXX}
-	{Student assistant}
-	{Department of Lipsum (Prof. Name)\newline University of Lipsum}
-	{Here you can describe your work content and go into detail about individual parts of this job. Possibly an enumeration by means of "," is useful. Otherwise, describe the essential content of this item in 1-2 sentences.}
-	\vfill\null
-
-
-\cvevent
-{XX/XXXX - XX/XXXX}
-	{Trainer - Course name}
-	{Department of Lipsum (Prof. Name)\newline University of Lipsum}
-	{Here you can describe your work content and go into detail about individual parts of this job. Possibly an enumeration by means of "," is useful. Otherwise, describe the essential content of this item in 1-2 sentences.}
-	\vfill\null
-
-
-
-\cvevent
-{XX/XXXX - XX/XXXX}
-	{Working student}
-	{Department \newline Company name (Location)}
-	{Here you can describe your work content and go into detail about individual parts of this job. Possibly an enumeration by means of "," is useful. Otherwise, describe the essential content of this item in 1-2 sentences.}
-	\vfill\null
-
-
-\cvsection{Publications}
-
-\begin{itemize}[leftmargin=*]
-\item Author, G. \& Author, P. \&  Author G. (2020). "This is the title of the publication". In: \textit{Proceedings of the 28th Conference on Lipsum (LIPSUM)}, Lipsum, June 12-17, 2020.
-\item Author, G. \& Author, P. \&  Author G. (2020). "This is the title of the publication". In: \textit{Proceedings of the 28th Conference on Lipsum (LIPSUM)}, Lipsum, June 12-17, 2020.
-\item Author, G. \& Author, P. \&  Author G. (2020). "This is the title of the publication". In: \textit{Proceedings of the 28th Conference on Lipsum (LIPSUM)}, Lipsum, June 12-17, 2020.
-\end{itemize}
 % hofixes to create fake-space to ensure the whole height is used
 \mbox{}
 \vfill
@@ -667,10 +576,9 @@
 \mbox{}
 
 
-Lorem, \today     \hspace{1cm}   \hrulefill
+Bochum, \today     \hspace{1cm}   \hrulefill
 
-\hspace*{30mm}\phantom{Lorem, \today }Philip Empl
-
+\hspace*{30mm}\phantom{Bochum, \today }Kevin Eschbach
 \end{rightcolumn}
 \end{paracol}
 
