--- a/cv.tex
+++ b/cv.tex
@@ -38,7 +38,7 @@
 
 % we use utf8 since we want to build from any machine
 \usepackage[utf8]{inputenc}		
-\usepackage[German]{isodate}
+\usepackage[german]{isodate}
 \usepackage{fancyhdr}
 \usepackage[numbers]{natbib}
 
