--- a/cv.tex
+++ b/cv.tex
@@ -506,10 +506,9 @@
 \cvevent
 {10/2022 - 11/2023}
     {Wissenschaftliche Hilfskraft}
-    {Lehrstuhl für Produktionssysteme\\Ruhr-Universität Bochum}
+    {Lehrstuhl für Produktionssysteme\newline Ruhr-Universität Bochum}
     {Entwicklung eines Systems zur Konfiguartionskorrektur eines Roboterarms mit Hilfe einer Infrarot Tiefen-Kamera im Rahmen des Projektes RoboSchalt.}
     \vfill\null
-
 
 %---------------------------------------------------------------------------------------
 %	EDUCATION
