--- a/cv.tex
+++ b/cv.tex
@@ -461,10 +461,13 @@
 %----------------------------------------------------------------------------------------
 
 \cvsection{Interessen}
+
     \icontext{CaretRight}{12}{3D-Druck}{black}\\[6pt]
     \icontext{CaretRight}{12}{Jagdhorn - Bläsercorps des Hegering Herne}{black}\\[6pt]
     \icontext{CaretRight}{12}{Videospiele}{black}\\[6pt]
     \icontext{CaretRight}{12}{Wandern}{black}\\[6pt]
+
+\newpage
 
 %---------------------------------------------------------------------------------------
 %	CONTACT
@@ -510,14 +513,13 @@
     {Entwicklung eines Systems zur Konfiguartionskorrektur eines Roboterarms mit Hilfe einer Infrarot Tiefen-Kamera im Rahmen des Projektes RoboSchalt.}
     \vfill\null
 
+
 %---------------------------------------------------------------------------------------
 %	EDUCATION
 %----------------------------------------------------------------------------------------
-
 \vspace{10pt}
 \cvsection{Bildung}
 \vspace{4pt}
-
 
 \cvevent
 {2007 - 2015}
@@ -526,15 +528,13 @@
 	{Leistungsfächer - Mathematik, Biologie}
 	\vfill\null
 	
-
 \cvevent
 {2015 - 2020}
 	{Bachelor of Science | Angewandte Informatik}
 	{Institut für Neuroinformatik\newline Ruhr-Universität Bochum}
-	{Teilnahme am informatiCup 2019\\
+	{Teilnahme am informatiCup 2019\newline
     Bachelor-Thesis - Stellplatzunabhängige Erkennung parallel geparkter Fahrzeuge mit Hilfe statischer Kameras}
 	\vfill\null
-
 
 \cvevent
 {2020 - Heute}
@@ -553,27 +553,15 @@
 \vspace{4pt}
 	
 \cvevent
-{10/2021 - Heute}
+{2021 - Heute}
     {Gesellschaft für Informatik (GI)}
 	{Mitglied der Fachgruppe Neuroinformatik, Gründungsmitglied der virtuellen Hochschulgruppe der jungen GI}
 	{}
 	\vfill\null
 
-% hofixes to create fake-space to ensure the whole height is used
+\newpage
 \mbox{}
 \vfill
-\mbox{}
-\vfill
-\mbox{}
-\vfill
-\mbox{}
-\vfill
-\mbox{}
-\vfill
-\mbox{}
-\vfill
-\mbox{}
-
 
 Bochum, \today     \hspace{1cm}   \hrulefill
 
