--- a/cv.tex
+++ b/cv.tex
@@ -185,7 +185,7 @@
 \definecolor{maincol}{RGB}{ 64,64,64}
 
 % accent color, secondary
-% \definecolor{accentcol}{RGB}{ 250, 150, 10 }
+%\definecolor{accentcol}{RGB}{ 250, 150, 10 }
 
 % dark color
 \definecolor{darkcol}{RGB}{ 70, 70, 70 }
@@ -503,14 +503,14 @@
 {05/2021 - 09/2022}
 	{Software Entwickler - Werkstudent}
 	{GBTEC Group}
-	{Quality Assertion und Frontend-Entwicklung mit Angular für eine Single-Page-Webapp zur Low- und No-Code Automatisierung von Business-Prozessen. Agiles Arbeitsumfeld im internationalen Team.}
+	{Quality Assertion und Fullstack-Entwicklung mit Angular und Java SpringBoot einer Single-Page-Webapp zur Low- und No-Code Automatisierung von Business-Prozessen unter Anwendung agiler Entwicklungsmethoden in einem internationalen Team.}
 	\vfill\null
 	
 \cvevent
 {10/2022 - 11/2023}
     {Wissenschaftliche Hilfskraft}
-    {Lehrstuhl für Produktionssysteme\newline Ruhr-Universität Bochum}
-    {Entwicklung eines Systems zur Konfiguartionskorrektur eines Roboterarms mit Hilfe einer Infrarot Tiefen-Kamera im Rahmen des Projektes RoboSchalt.}
+    { Ruhr-Universität Bochum \newline Lehrstuhl für Produktionssysteme}
+    {Entwicklung eines Systems zur Konfiguartionskorrektur eines Roboterarms mit Hilfe einer Infrarot Tiefen-Kamera mit Python im Rahmen des Projektes RoboSchalt. Entwicklung einer Verkabelungsunterstützung für Schaltschränke der Losgrö\ss e 0 mit Hilfe von Machine Learning Methoden in C\#.}
     \vfill\null
 
 
@@ -531,19 +531,47 @@
 \cvevent
 {2015 - 2020}
 	{Bachelor of Science | Angewandte Informatik}
-	{Institut für Neuroinformatik\newline Ruhr-Universität Bochum}
-	{Teilnahme am informatiCup 2019\newline
+	{Ruhr-Universität Bochum \newline Institut für Neuroinformatik}
+	{Teilnahme am informatiCup 2019 - Fooling neural networks for image recognition with fake traffic signs - Grey Box Attack\newline
     Bachelor-Thesis - Stellplatzunabhängige Erkennung parallel geparkter Fahrzeuge mit Hilfe statischer Kameras}
 	\vfill\null
 
 \cvevent
 {2020 - Heute}
 	{Master of Science | Angewandte Informatik}
-	{Institut für Neuroinformatik\newline Ruhr-Universität Bochum}
+	{ Ruhr-Universität Bochum\newline Institut für Neuroinformatik}
 	{Fachlicher Schwerpunkt - Computational Neuroscience, Machine Learning\\
-    Master-Thesis - Algal growth Optimization with Machine Learning Methods}
+    Master-Thesis - Vorläufiger Titel - Algal growth Optimization with Machine Learning Methods}
 	\vfill\null
-    
+
+
+\newpage
+%---------------------------------------------------------------------------------------
+%	Skillz
+%----------------------------------------------------------------------------------------
+\vspace{10pt}
+\cvsection{Skills}
+
+
+\cvsubsection{Programmiersprachen}
+
+\cvskill{Python} {Projekterfahrung} {0.85}\\
+\cvskill {JavaScript} {vers. Frameworks} {0.65}\\
+\cvskill {Java} { } {0.6} \\
+\cvskill {C++} {} {0.5}\\
+
+
+\cvsubsection{Betriebssysteme}
+
+\cvskill {Linux} { } {0.7} \\
+\cvskill {Windows} { } {0.5} \\
+
+
+\cvsubsection{Branchenwissen}
+
+\cvskill {Machine Learning} {Projekterfahrung} {0.8}\\
+\cvskill {Computational Neuroscience} {} {0.65}\\
+
 
 %---------------------------------------------------------------------------------------
 %	VOLUNTEERING
@@ -559,9 +587,10 @@
 	{}
 	\vfill\null
 
-\newpage
+
 \mbox{}
 \vfill
+\vspace{245pt}
 
 Bochum, \today     \hspace{1cm}   \hrulefill
 
