--- a/cover_letter.tex
+++ b/cover_letter.tex
@@ -276,34 +276,34 @@
 \setlength{\columnseprule}{4pt}
 \colseprulecolor{white}
 
-\AtBeginShipoutFirst{\Header{Cover Letter}\Footer{1}}
+\AtBeginShipoutFirst{\Header{Anschreiben}\Footer{1}}
 \newpage
 
 %%%%ANSCHREIBEN
 
 \cvtext{}\\[10pt]
  \begin{tabular}[t]{p{5cm}p{9cm}p{6cm}}
-     &  & \cvtext{\textbf{Philip Empl}} \\
-     &  & \cvtext{Street Name XX}\\
-     &  & \cvtext{Zip City}\\
-     &  & \cvtext{+XX XXX XXXX XX}\\
-     &  & \cvtext{XX@XXXX.XX}\\[20pt]
+     &  & \cvtext{\textbf{Kevin Eschbach}} \\
+     &  & \cvtext{Westring 37}\\
+     &  & \cvtext{44787, Bochum}\\
+     &  & \cvtext{+49 157 746 905 33}\\
+     &  & \cvtext{kevin.eschbach@rub.de}\\[20pt]
     \end{tabular}\\
 
-\cvtext{\textbf{Name of the Organization
+\cvtext{\textbf{Company Foo
 }\newline Street Name XX\newline Cip City}\\[40pt]
  \raggedright
   \begin{tabular}[t]{p{5cm}p{6.8cm}p{8cm}}
      &  & 
-\cvtext{ Regensburg, den \today}\\[20pt]
+\cvtext{ Bochum, \today}\\[20pt]
   \end{tabular}
-\cvtext{\large{\textbf{Awesome Job I Would Like To Apply For}}}\\[25pt]
-\cvtext{Dear Ladies and Gentlemen,\newline \newline}
+\cvtext{\large{\textbf{Bewerbung - Job Bar}}}\\[25pt]
+\cvtext{Sehr geehrte Damen und Herren,\newline \newline}
 
 \cvtext{\lipsum[3-8]}\\[25pt]
 
-\cvtext{Best regards,}\\[40pt]
-\cvtext{Philip Empl}
+\cvtext{Mit freundlichen Grü\ss en,}\\[40pt]
+\cvtext{Kevin Eschbach}
 % ZUSAMMENFASSUNG
 
 \end{document}
